[package]
name = "colorscheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["env", "derive"] }
colored = "2.0.0"
home = "0.5.4"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
